# pyNCA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  STATUS_UPDATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
docs/api/: analysis.rst  calc.rst  core.rst
docs/tutorials/: theophylline.rst
examples/: theophylline_analysis.ipynb
pynca/: __init__.py
pynca/analysis/: __init__.py  intervals.py  multi_analyte.py  nca.py  sparse.py  steady_state.py  superposition.py
pynca/calc/: __init__.py  auc.py  aumc.py  bioavailability.py  clearance.py  cmax.py  half_life.py  parameters.py
pynca/cleaning/: __init__.py  blq.py  exclusion.py  imputation.py
pynca/core/: __init__.py  concentration.py  data.py  dose.py  options.py  results.py
pynca/interpolation/: __init__.py  extrapolate.py  interpolate.py
pynca/plotting/: __init__.py  conc_time.py  diagnostics.py  summary.py
pynca/summary/: __init__.py  summarize.py  units.py
pynca/utils/: __init__.py  helpers.py  parallel.py  validation.py
tests/: __init__.py  test_auc.py  test_clearance.py  test_cmax.py  test_half_life.py  test_integration.py  test_multi_analyte.py  test_parallel.py  test_population.py
validation/: VALIDATION_REPORT.md  validate_theophylline.py
