[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nca-tools"
version = "0.1.0"
description = "Python package for Pharmacokinetic Non-Compartmental Analysis"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    {name = "pyNCA Authors"}
]
keywords = ["pharmacokinetics", "NCA", "non-compartmental analysis", "PK", "PKNCA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "pint>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
plot = [
    "matplotlib>=3.5",
]
all = [
    "matplotlib>=3.5",
    "openpyxl>=3.0",
]

[project.urls]
Homepage = "https://github.com/husain-clintel/pyNCA"
Documentation = "https://pynca.readthedocs.io"
Repository = "https://github.com/husain-clintel/pyNCA"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynca*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert warnings in production code
